--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,13 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.2-1.0"
+version = "1.7.2-1.0." + System.getenv("BUILD_NUMBER") ?: 0;
 group= "com.mj41374.mkmod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "mkmod"
 
 minecraft {
     version = "1.7.2-10.12.1.1082"
-    assetDir = "eclipse/assets"
+    assetDir = "mkmod/assets"
 }
 
 dependencies {
